test/valid/ClassWithMissingToStringMethod/SecondTestClassWithMissingToStringMethod.plume
/**
 * A class to test the missing to string class
 *
 * @author Robin Burgess 36815
 */
class SecondTestClassWithMissingToStringMethod extends Object is

  method main : () -> String is
    new ClassWithMissingToStringMethod(5).toString()