test/invalid/MalformedArrowToken/MalformedArrowToken.plume
/**
 * @author Robin Burgess 36815
 */
 class MalformedArrowToken extends Object is
 	field h : Integer
 	field t : Integer
 	method totalValue : () --> Integer is
 		t + h